1. Show message if change workflow state 2. Verify all workflows are complete

--- a/src/components/stateful/Home/Home.scss
+++ b/src/components/stateful/Home/Home.scss
@@ -1,11 +1,12 @@
 .card-container {
   font-size: 1em;
+  margin:0;
   .cards-wrapper {
-    margin: 20px;
+    // margin: 20px;
 
     .card {
       max-width: 200px;
-      height: 100px;
+      height: 150px;
       padding: 5px 10px;
 
       .heading {
